[feat] 이용권 발행 속성 수정 API
